--- a/app-ols-integration/main/default/classes/OnlineStoreCustomerHelper.cls
+++ b/app-ols-integration/main/default/classes/OnlineStoreCustomerHelper.cls
@@ -165,7 +165,7 @@ public class OnlineStoreCustomerHelper {
 
         } catch( Exception e ){
             CreedExceptionHandler handler = new CreedExceptionHandler(e);
-            handler.handle();
+            handler.debug();
         }
 
         if( job != null ) return;
